--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 
   <script type="text/javascript">
-   function generateId () {
+    function generateId() {
       return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
     }
     // Library code
@@ -120,7 +120,7 @@
     }
     const store = createStore(app)
     store.subscribe(() => {
-      const {goals, todos} = store.getState()
+      const { goals, todos } = store.getState()
 
       document.getElementById('goals').innerHTML = ''
       document.getElementById('todos').innerHTML = ''
@@ -129,31 +129,7 @@
       todos.forEach(addTodoToDOM)
     })
 
-    function addTodoToDOM (todo) {
-      const node = document.createElement('li')
-      const text = document.createTextNode(todo.name)
-      node.appendChild(text)
-      node.style.textDecoration = todo.complete ? 'line-through' : 'none'
-      node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(todo.id))
-      })
 
-      document.getElementById('todos').appendChild(node)
-    }
-
-    function addGoalToDOM (goal) {
-
-      const node = document.createElement('li')
-      const text = document.createTextNode(goal.name)
-      node.appendChild(text)
-      node.style.textDecoration = todo.complete ? 'line-through' : 'none'
-      node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(goal.id))
-      })
-      document.getElementById('goals').appendChild(node)
-
-      
-    }
     // store.dispatch(addTodoAction({
     //   id: 0,
     //   name: 'Walk the dog',
@@ -180,31 +156,81 @@
     //   name: 'Lose 20 pounds'
     // }))
     // store.dispatch(removeGoalAction(0))
+
     // DOM code
 
-    function addTodo () {
+    function createRemoveButton(onClick) {
+      const removeBtn = document.createElement('button')
+      removeBtn.innerHTML = 'X'
+      removeBtn.addEventListener('click', onClick)
+      return removeBtn
+
+    }
+    function addTodoToDOM(todo) {
+      const node = document.createElement('li')
+      const text = document.createTextNode(todo.name)
+
+      const removeBtn = createRemoveButton(() => {
+        store.dispatch(removeTodoAction, todo.id)
+      })
+
+      node.appendChild(text)
+      node.appendChild(removeBtn)
+
+      node.style.textDecoration = todo.complete ? 'line-through' : 'none'
+
+      node.addEventListener('click', () => {
+        store.dispatch(toggleTodoAction(todo.id))
+      })
+
+      document.getElementById('todos').appendChild(node)
+    }
+
+    function addGoalToDOM(goal) {
+
+      const node = document.createElement('li')
+      const text = document.createTextNode(goal.name)
+
+      const removeBtn = createRemoveButton(() => {
+        store.dispatch(removeGoalAction, goal.id)
+      })
+
+      node.appendChild(text)
+      node.appendChild(removeBtn)
+
+      node.style.textDecoration = todo.complete ? 'line-through' : 'none'
+
+      node.addEventListener('click', () => {
+        store.dispatch(toggleTodoAction(goal.id))
+      })
+      document.getElementById('goals').appendChild(node)
+
+
+    }
+
+    function addTodo() {
       const input = document.getElementById('todo')
       const name = input.value
       input.value = ''
       store.dispatch(addTodoAction({
-      id: generateId(),
-      name
-    }))
+        id: generateId(),
+        name
+      }))
 
     }
-    function addGoal () {
+    function addGoal() {
       const input = document.getElementById('goal')
       const name = input.value
       input.value = ''
       store.dispatch(addGoalAction({
-      id: generateId(),
-      name,
-      complete: false,
-    }))
+        id: generateId(),
+        name,
+        complete: false,
+      }))
     }
 
-    document.getElementById('todoBtn').addEventListener('click',addTodo)
-    document.getElementById('goalBtn').addEventListener('click',addGoal)
+    document.getElementById('todoBtn').addEventListener('click', addTodo)
+    document.getElementById('goalBtn').addEventListener('click', addGoal)
   </script>
 </body>
 
