--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,21 @@
       }
     }
     // Reducer function
+    function checkAndDispatch (store, action) {
+      if (
+        action.type === ADD_TODO &&
+        action.todo.name.toLowerCase().indexOf('bitcoin') !== -1
+      ) {
+        return alert("Nope. That's a bad idea.")
+      }
+      if (
+        action.type === ADD_GOAL &&
+        action.goal.name.toLowerCase().indexOf('bitcoin') !== -1
+      ) {
+        return alert("Nope. That's a bad idea.")
+      }
+      return store.dispatch(action)
+    }
     function todos(state = [], action) {
       switch (action.type) {
         case ADD_TODO:
@@ -189,7 +204,7 @@
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
 
       node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(todo.id))
+        checkAndDispatch(store, toggleTodoAction(todo.id))
       })
 
       document.getElementById('todos').appendChild(node)
@@ -201,7 +216,7 @@
       const text = document.createTextNode(goal.name)
 
       const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeGoalAction, goal.id)
+        checkAndDispatch(store, removeGoalAction, goal.id)
       })
 
       node.appendChild(text)
@@ -210,7 +225,7 @@
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
 
       node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(goal.id))
+        checkAndDispatch(store, toggleTodoAction(goal.id))
       })
       document.getElementById('goals').appendChild(node)
 
@@ -221,7 +236,7 @@
       const input = document.getElementById('todo')
       const name = input.value
       input.value = ''
-      store.dispatch(addTodoAction({
+      checkAndDispatch(store, addTodoAction({
         id: generateId(),
         name
       }))
@@ -231,7 +246,7 @@
       const input = document.getElementById('goal')
       const name = input.value
       input.value = ''
-      store.dispatch(addGoalAction({
+      checkAndDispatch(store, addGoalAction({
         id: generateId(),
         name,
         complete: false,
