--- a/src/index.html
+++ b/src/index.html
@@ -2,57 +2,28 @@
 <html>
 
 <head>
-  <title>todo/goals</title>
+  <title>Todos/Goals</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js'></script>
 </head>
 
 <body>
-
   <div>
-    <h1>To do List</h1>
-    <input id="todo" type="text" placeholder="Add Todo">
-    <button id="todoBtn">Add TODO</button>
-    <ul id="todos"></ul>
+    <h1>Todo List</h1>
+    <input id='todo' type='text' placeholder="Add Todo">
+    <button id='todoBtn'>Add Todo</button>
+    <ul id='todos'></ul>
   </div>
-  <h1>Goals</h1>
-  <input id="goal" type="text" placeholder="Add Goals">
-  <button id="goalBtn">Add GOAL</button>
-  <ul id="goals"></ul>
+  <div>
+    <h1>Goals</h1>
+    <input id='goal' type='text' placeholder='Add Goal' />
+    <button id='goalBtn'>Add Goal</button>
+    <ul id='goals'></ul>
+  </div>
 
-
-
-
-  <script type="text/javascript">
+  <script type='text/javascript'>
     function generateId() {
       return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
     }
-    // Library code
-
-    // function createStore(reducer) {
-    //   // The store should have four parts
-    //   // 1. The state
-    //   // 2. Get the state. (getState)
-    //   // 3. Listen to changes on the state. (subscribe)
-    //   // 4. Update the state (dispatch)
-    //   let state
-    //   let listeners = []
-    //   const getState = () => state
-    //   const subscribe = (listener) => {
-    //     listeners.push(listener)
-    //     return () => {
-    //       listeners = listeners.filter((l) => l !== listener)
-    //     }
-    //   }
-    //   const dispatch = (action) => {
-    //     state = reducer(state, action)
-    //     listeners.forEach((listener) => listener())
-    //   }
-    //   return {
-    //     getState,
-    //     subscribe,
-    //     dispatch,
-    //   }
-    // }
     // App Code
     const ADD_TODO = 'ADD_TODO'
     const REMOVE_TODO = 'REMOVE_TODO'
@@ -89,8 +60,7 @@
         id,
       }
     }
-    // Reducer function
-    function checkAndDispatch (store, action) {
+    const checker = (store) => (next) => (action) => {
       if (
         action.type === ADD_TODO &&
         action.todo.name.toLowerCase().indexOf('bitcoin') !== -1
@@ -103,8 +73,9 @@
       ) {
         return alert("Nope. That's a bad idea.")
       }
-      return store.dispatch(action)
+      return next(action)
     }
+    // Reducer function
     function todos(state = [], action) {
       switch (action.type) {
         case ADD_TODO:
@@ -129,132 +100,73 @@
           return state
       }
     }
-    // function app(state = {}, action) {
-    //   return {
-    //     todos: todos(state.todos, action),
-    //     goals: goals(state.goals, action)
-    //   }
-    // }
-    
-    // const store = Redux.createStore(app)
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
-    }))
-
-
+    }), Redux.applyMiddleware(checker))
     store.subscribe(() => {
       const { goals, todos } = store.getState()
-
       document.getElementById('goals').innerHTML = ''
       document.getElementById('todos').innerHTML = ''
-
       goals.forEach(addGoalToDOM)
       todos.forEach(addTodoToDOM)
     })
-
-
-    // store.dispatch(addTodoAction({
-    //   id: 0,
-    //   name: 'Walk the dog',
-    //   complete: false,
-    // }))
-    // store.dispatch(addTodoAction({
-    //   id: 1,
-    //   name: 'Wash the car',
-    //   complete: false,
-    // }))
-    // store.dispatch(addTodoAction({
-    //   id: 2,
-    //   name: 'Go to the gym',
-    //   complete: true,
-    // }))
-    // store.dispatch(removeTodoAction(1))
-    // store.dispatch(toggleTodoAction(0))
-    // store.dispatch(addGoalAction({
-    //   id: 0,
-    //   name: 'Learn Redux'
-    // }))
-    // store.dispatch(addGoalAction({
-    //   id: 1,
-    //   name: 'Lose 20 pounds'
-    // }))
-    // store.dispatch(removeGoalAction(0))
-
     // DOM code
-
     function createRemoveButton(onClick) {
       const removeBtn = document.createElement('button')
       removeBtn.innerHTML = 'X'
       removeBtn.addEventListener('click', onClick)
       return removeBtn
-
     }
     function addTodoToDOM(todo) {
       const node = document.createElement('li')
       const text = document.createTextNode(todo.name)
-
       const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeTodoAction, todo.id)
+        store.dispatch(removeTodoAction(todo.id))
       })
-
       node.appendChild(text)
       node.appendChild(removeBtn)
-
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
-
       node.addEventListener('click', () => {
-        checkAndDispatch(store, toggleTodoAction(todo.id))
+        store.dispatch(toggleTodoAction(todo.id))
       })
-
-      document.getElementById('todos').appendChild(node)
+      document.getElementById('todos')
+        .appendChild(node)
     }
-
     function addGoalToDOM(goal) {
-
       const node = document.createElement('li')
       const text = document.createTextNode(goal.name)
-
       const removeBtn = createRemoveButton(() => {
-        checkAndDispatch(store, removeGoalAction, goal.id)
+        store.dispatch(removeGoalAction(goal.id))
       })
-
       node.appendChild(text)
       node.appendChild(removeBtn)
-
-      node.style.textDecoration = todo.complete ? 'line-through' : 'none'
-
-      node.addEventListener('click', () => {
-        checkAndDispatch(store, toggleTodoAction(goal.id))
-      })
-      document.getElementById('goals').appendChild(node)
-
-
+      document.getElementById('goals')
+        .appendChild(node)
     }
-
     function addTodo() {
       const input = document.getElementById('todo')
       const name = input.value
       input.value = ''
-      checkAndDispatch(store, addTodoAction({
-        id: generateId(),
-        name
-      }))
-
-    }
-    function addGoal() {
-      const input = document.getElementById('goal')
-      const name = input.value
-      input.value = ''
-      checkAndDispatch(store, addGoalAction({
+      store.dispatch(addTodoAction({
         id: generateId(),
         name,
         complete: false,
       }))
     }
-
-    document.getElementById('todoBtn').addEventListener('click', addTodo)
-    document.getElementById('goalBtn').addEventListener('click', addGoal)
+    function addGoal() {
+      const input = document.getElementById('goal')
+      const name = input.value
+      input.value = ''
+      store.dispatch(addGoalAction({
+        id: generateId(),
+        name,
+      }))
+    }
+    document.getElementById('todoBtn')
+      .addEventListener('click', addTodo)
+    document.getElementById('goalBtn')
+      .addEventListener('click', addGoal)
   </script>
 </body>
 
