--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Todos/Goals</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js'></script>
 </head>
-
 <body>
   <div>
     <h1>Todo List</h1>
@@ -21,7 +19,7 @@
   </div>
 
   <script type='text/javascript'>
-    function generateId() {
+    function generateId () {
       return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
     }
     // App Code
@@ -30,31 +28,31 @@
     const TOGGLE_TODO = 'TOGGLE_TODO'
     const ADD_GOAL = 'ADD_GOAL'
     const REMOVE_GOAL = 'REMOVE_GOAL'
-    function addTodoAction(todo) {
+    function addTodoAction (todo) {
       return {
         type: ADD_TODO,
         todo,
       }
     }
-    function removeTodoAction(id) {
+    function removeTodoAction (id) {
       return {
         type: REMOVE_TODO,
         id,
       }
     }
-    function toggleTodoAction(id) {
+    function toggleTodoAction (id) {
       return {
         type: TOGGLE_TODO,
         id,
       }
     }
-    function addGoalAction(goal) {
+    function addGoalAction (goal) {
       return {
         type: ADD_GOAL,
         goal,
       }
     }
-    function removeGoalAction(id) {
+    function removeGoalAction (id) {
       return {
         type: REMOVE_GOAL,
         id,
@@ -75,35 +73,43 @@
       }
       return next(action)
     }
+    const logger = (store) => (next) => (action) => {
+      console.group(action.type)
+      console.log('The action: ', action)
+      const result = next(action)
+      console.log('The new state: ', store.getState())
+      console.groupEnd()
+      return result
+    }
     // Reducer function
-    function todos(state = [], action) {
-      switch (action.type) {
-        case ADD_TODO:
+    function todos (state = [], action) {
+      switch(action.type) {
+        case ADD_TODO :
           return state.concat([action.todo])
-        case REMOVE_TODO:
+        case REMOVE_TODO :
           return state.filter((todo) => todo.id !== action.id)
-        case TOGGLE_TODO:
+        case TOGGLE_TODO :
           return state.map((todo) => todo.id !== action.id ? todo :
-            Object.assign({}, todo, { complete: !todo.complete })
+            Object.assign({}, todo, {complete: !todo.complete})
           )
-        default:
+        default :
           return state
       }
     }
-    function goals(state = [], action) {
-      switch (action.type) {
-        case ADD_GOAL:
+    function goals (state = [], action) {
+      switch(action.type) {
+        case ADD_GOAL :
           return state.concat([action.goal])
-        case REMOVE_GOAL:
+        case REMOVE_GOAL :
           return state.filter((goal) => goal.id !== action.id)
-        default:
+        default :
           return state
       }
     }
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
-    }), Redux.applyMiddleware(checker))
+    }), Redux.applyMiddleware(checker, logger))
     store.subscribe(() => {
       const { goals, todos } = store.getState()
       document.getElementById('goals').innerHTML = ''
@@ -112,13 +118,13 @@
       todos.forEach(addTodoToDOM)
     })
     // DOM code
-    function createRemoveButton(onClick) {
+    function createRemoveButton (onClick) {
       const removeBtn = document.createElement('button')
       removeBtn.innerHTML = 'X'
       removeBtn.addEventListener('click', onClick)
       return removeBtn
     }
-    function addTodoToDOM(todo) {
+    function addTodoToDOM (todo) {
       const node = document.createElement('li')
       const text = document.createTextNode(todo.name)
       const removeBtn = createRemoveButton(() => {
@@ -133,7 +139,7 @@
       document.getElementById('todos')
         .appendChild(node)
     }
-    function addGoalToDOM(goal) {
+    function addGoalToDOM (goal) {
       const node = document.createElement('li')
       const text = document.createTextNode(goal.name)
       const removeBtn = createRemoveButton(() => {
@@ -144,7 +150,7 @@
       document.getElementById('goals')
         .appendChild(node)
     }
-    function addTodo() {
+    function addTodo () {
       const input = document.getElementById('todo')
       const name = input.value
       input.value = ''
@@ -154,7 +160,7 @@
         complete: false,
       }))
     }
-    function addGoal() {
+    function addGoal () {
       const input = document.getElementById('goal')
       const name = input.value
       input.value = ''
@@ -169,5 +175,4 @@
       .addEventListener('click', addGoal)
   </script>
 </body>
-
 </html>
