--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
     <button id='goalBtn'>Add Goal</button>
     <ul id='goals'></ul>
   </div>
-  <hr/>
 
-    <div id = 'app'></div>
+  <hr />
+
+  <div id='app'></div>
 
   <script type='text/javascript'>
     function generateId () {
@@ -182,56 +183,63 @@
   </script>
 
   <script type="text/babel">
-
-
     function List (props) {
       return (
         <ul>
-          <li>List</li>
+          <li>LIST</li>
         </ul>
       )
     }
-
     class Todos extends React.Component {
+      addItem = (e) => {
+        e.preventDefault()
+        const name = this.input.value
+        this.input.value = ''
+        this.props.store.dispatch(addTodoAction({
+          id: generateId(),
+          name,
+          complete: false,
+        }))
+      }
       render() {
         return (
           <div>
-          TODOS
+            <h1>Todo List</h1>
+            <input
+              type='text'
+              placeholder='Add Todo'
+              ref={(input) => this.input = input}
+            />
+            <button onClick={this.addItem}>Add Todo</button>
             <List />
           </div>
         )
       }
     }
-
     class Goals extends React.Component {
       render() {
         return (
           <div>
-          GOALS
+            GOALS
             <List />
           </div>
         )
       }
     }
-
-
     class App extends React.Component {
       render() {
         return (
           <div>
-            REACT APP
-            <Todos />
+            <Todos store={this.props.store} />
             <Goals />
           </div>
         )
       }
     }
-
     ReactDOM.render(
-      <App />,
+      <App store={store} />,
       document.getElementById('app')
     )
-  
   </script>
 </body>
 </html>
