--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,36 @@
         goals,
       }
     }
+    function handleDeleteTodo (todo) {
+      return (dispatch) => {
+        dispatch(removeTodoAction(todo.id))
+        return API.deleteTodo(todo.id)
+          .catch(() => {
+            dispatch(addTodoAction(todo))
+            alert('An error occurred. Try again.')
+          })
+      }
+    }
+    function handleDeleteGoal (goal) {
+      return (dispatch) => {
+        dispatch(removeGoalAction(goal.id))
+        return API.deleteGoal(goal.id)
+          .catch(() => {
+            dispatch(addGoalAction(goal))
+            alert('An error occurred. Try again.')
+          })
+      }
+    }
+    function handleAddGoal (name, cb) {
+      return (dispatch) => {
+        return API.saveGoal(name)
+          .then((goal) => {
+            dispatch(addGoalAction(goal))
+            cb()
+          })
+          .catch(() => alert('There was an error. Try again.'))
+      }
+    }
     const checker = (store) => (next) => (action) => {
       if (
         action.type === ADD_TODO &&
@@ -81,6 +111,12 @@
       console.log('The new state: ', store.getState())
       console.groupEnd()
       return result
+    }
+    const thunk = (store) => (next) => (action) => {
+      if (typeof action === 'function') {
+        return action(store.dispatch)
+      }
+      return next(action)
     }
     // Reducer function
     function todos (state = [], action) {
@@ -123,7 +159,7 @@
       todos,
       goals,
       loading,
-    }), Redux.applyMiddleware(checker, logger))
+    }), Redux.applyMiddleware(thunk, checker, logger))
   </script>
 
   <script type="text/babel">
@@ -154,12 +190,7 @@
           .catch(() => alert('There was an error. Try again.'))
       }
       removeItem = (todo) => {
-        this.props.store.dispatch(removeTodoAction(todo.id))
-        return API.deleteTodo(todo.id)
-          .catch(() => {
-            this.props.store.dispatch(addTodoAction(todo))
-            alert('An error occurred. Try again.')
-          })
+        this.props.store.dispatch(handleDeleteTodo(todo))
       }
       toggleItem = (id) => {
         this.props.store.dispatch(toggleTodoAction(id))
@@ -191,20 +222,13 @@
     class Goals extends React.Component {
       addItem = (e) => {
         e.preventDefault()
-        return API.saveGoal(this.input.value)
-          .then((goal) => {
-            this.props.store.dispatch(addGoalAction(goal))
-            this.input.value = ''
-          })
-          .catch(() => alert('There was an error. Try again.'))
+        this.props.store.dispatch(handleAddGoal(
+          this.input.value,
+          () => this.input.value = ''
+        ))
       }
       removeItem = (goal) => {
-        this.props.store.dispatch(removeGoalAction(goal.id))
-        return API.deleteGoal(goal.id)
-          .catch(() => {
-            this.props.store.dispatch(addGoalAction(goal))
-            alert('An error occurred. Try again.')
-          })
+        this.props.store.dispatch(handleDeleteGoal(goal))
       }
       render() {
         return (
