--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <script src='https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js'></script>
   <script src='https://unpkg.com/babel-standalone@6.15.0/babel.min.js'></script>
   <script src='https://tylermcginnis.com/goals-todos-api/index.js'></script>
+  <script src='https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js'></script>
 </head>
 <body>
   <div id='app'></div>
@@ -89,6 +90,36 @@
           .catch(() => alert('There was an error. Try again.'))
       }
     }
+    function handleAddTodo (name, cb) {
+      return (dispatch) => {
+        return API.saveTodo(name)
+          .then((todo) => {
+            dispatch(addTodoAction(todo))
+            cb()
+          })
+          .catch(() => alert('There was an error. Try again.'))
+      }
+    }
+    function handleToggle (id) {
+      return (dispatch) => {
+        dispatch(toggleTodoAction(id))
+        return API.saveTodoToggle(id)
+          .catch(() => {
+            dispatch(toggleTodoAction(id))
+            alert('An error occurred. Try again.')
+          })
+      }
+    }
+    function handleInitialData () {
+      return (dispatch) => {
+        return Promise.all([
+          API.fetchTodos(),
+          API.fetchGoals(),
+        ]).then(([ todos, goals ]) => {
+          dispatch(receiveDataAction(todos, goals))
+        })
+      }
+    }
     const checker = (store) => (next) => (action) => {
       if (
         action.type === ADD_TODO &&
@@ -111,12 +142,6 @@
       console.log('The new state: ', store.getState())
       console.groupEnd()
       return result
-    }
-    const thunk = (store) => (next) => (action) => {
-      if (typeof action === 'function') {
-        return action(store.dispatch)
-      }
-      return next(action)
     }
     // Reducer function
     function todos (state = [], action) {
@@ -159,7 +184,7 @@
       todos,
       goals,
       loading,
-    }), Redux.applyMiddleware(thunk, checker, logger))
+    }), Redux.applyMiddleware(ReduxThunk.default, checker, logger))
   </script>
 
   <script type="text/babel">
@@ -182,23 +207,16 @@
     class Todos extends React.Component {
       addItem = (e) => {
         e.preventDefault()
-        return API.saveTodo(this.input.value)
-          .then((todo) => {
-            this.props.store.dispatch(addTodoAction(todo))
-            this.input.value = ''
-          })
-          .catch(() => alert('There was an error. Try again.'))
+        this.props.store.dispatch(handleAddTodo(
+          this.input.value,
+          () => this.input.value = ''
+        ))
       }
       removeItem = (todo) => {
         this.props.store.dispatch(handleDeleteTodo(todo))
       }
       toggleItem = (id) => {
-        this.props.store.dispatch(toggleTodoAction(id))
-        return API.saveTodoToggle(id)
-          .catch(() => {
-            this.props.store.dispatch(toggleTodoAction(id))
-            alert('An error occurred. Try again.')
-          })
+        this.props.store.dispatch(handleToggle(id))
       }
       render() {
         return (
@@ -251,12 +269,7 @@
     class App extends React.Component {
       componentDidMount () {
         const { store } = this.props
-        Promise.all([
-          API.fetchTodos(),
-          API.fetchGoals(),
-        ]).then(([ todos, goals ]) => {
-          store.dispatch(receiveDataAction(todos, goals))
-        })
+        store.dispatch(handleInitialData())
         store.subscribe(() => this.forceUpdate())
       }
       render() {
